--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 activityCompose = "1.10.0"
 agp = "8.8.1"
 composeBom = "2025.02.00"
+composeDestinations = "2.0.0-beta12"
 coreKtx = "1.15.0"
 espressoCore = "3.6.1"
 junit = "4.13.2"
@@ -27,11 +28,14 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+composeDestinations-core = {module = "io.github.raamcosta.compose-destinations:core", version.ref = "composeDestinations"}
+composeDestinations-ksp = {module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations"}
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 koin-android = { module = "io.insert-koin:koin-android" }
 koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koinAnnotationsBom" }
 koin-annotations-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "koinAnnotationsBom" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koinBom" }
+koin-composable = { module = "io.insert-koin:koin-androidx-compose" }
 koin-core = { module = "io.insert-koin:koin-core" }
 
 [plugins]
